# sighandlers

./: CMakeLists.txt  LICENSE  README.md
include/: sigabrt.h  sigsegv.h
src/: sigabrt.cpp  sigsegv.cpp
src/test/: sah.cpp  sfh.cpp
